# miro

./: .gitignore  .vercelignore  BACKEND_FOLDER_GUIDE.md  README.md  app.js  findings.md  index.html  package-lock.json  package.json  playwright.config.js  progress.md  render.yaml  runtime-config.js  task_plan.md  tmp_browser_audio_experiments.py  tmp_browser_audio_validation.cjs  vercel.json
backend/: .env.example  Procfile  README.md  alembic.ini  docker-compose.dev.yml  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  router.py
backend/app/core/: config.py  errors.py  logging.py  middleware.py  shared_catalog.py
backend/app/db/: base.py  session.py
backend/app/models/: __init__.py  audit.py  billing.py  common.py  hardware.py  learning.py  realtime_observability.py  review.py  simulation.py  user.py
backend/app/modules/: README.md  __init__.py
backend/app/services/: __init__.py  current_actor.py  supabase_auth.py
backend/migrations/versions/: 20260315_0001_initial_foundation.py  20260315_0002_learning_precheck_seed.py  20260315_0003_simulation_setup.py  20260315_0004_realtime_launch_minimal.py  20260315_0005_realtime_lifecycle_hardening.py  20260316_0006_realtime_provider_runtime.py  (+7 more)
backend/scripts/: run_realtime_voice_healthcheck.py
backend/tests/: conftest.py  test_auth_api.py  test_billing_api.py  test_hardware_api.py  test_learning_api.py  test_realtime_scaffold.py  test_realtime_session_api.py  test_review_analysis.py  test_review_api.py  test_runtime_settings.py  test_simulation_setup_api.py
docs/: README.md
(+164 files in other folders)
